near complete rewrite of django plugin, now making public
- monkeypatching now formalized w/ a patch manager,
  and should be *much* more resilient.
- patch states reduced greatly, simplified code and tests
- now handles django 1.4 correctly - patches hashers module as well
  (had to write some new wrappers)
- added experimental methods GenericHandler.parsehash() to back our wrapper of Hasher.safe_summary()
- XXX: doesn't currently import current HASHER state,
- XXX: can't import hashers into passlib either -- though left initial notes on this

--- a/CHANGES
+++ b/CHANGES
@@ -158,6 +158,10 @@ Release History
 
     Other
 
+        * Added :mod:`passlib.ext.django`, a Django plugin which can be used to
+          override Django's password hashing framework with a custom Passlib
+          policy (An undocumented beta version was present in the 1.5 release).
+
         * The api for the :mod:`passlib.apache` module has been updated
           to add more flexibility, and to fix some ambiguous method
           and keyword names. The old names are still supported, but deprecated,
